--- a/index.html
+++ b/index.html
@@ -706,6 +706,10 @@ avaliarem as características dessas interconexões para extrair insights
 <p><a href="https://github.com/DATAUNIRIO/minicurso_SNA/raw/main/dados/os_miseraveis.Rdata">https://github.com/DATAUNIRIO/minicurso_SNA/raw/main/dados/os_miseraveis.Rdata</a></p>
 <p><a href="https://github.com/DATAUNIRIO/minicurso_SNA/raw/main/dados/star.Rdata">https://github.com/DATAUNIRIO/minicurso_SNA/raw/main/dados/star.Rdata</a></p>
 </div>
+<div id="apresentação" class="section level3">
+<h3>Apresentação</h3>
+<p><a href="https://github.com/DATAUNIRIO/minicurso_SNA/raw/main/escopo/apresentacao.pdf">https://github.com/DATAUNIRIO/minicurso_SNA/raw/main/escopo/apresentacao.pdf</a></p>
+</div>
 <div id="objetivo" class="section level2">
 <h2>OBJETIVO</h2>
 <p>O objetivo central do curso é promover a capacidade de criar códigos
